# adk-kubernetes

./: .gitignore  LICENSE  README.md
app/: Makefile  README.md  config.yaml  main.py  postman-collection.json  postman-environment.json  pyproject.toml
app/application/interfaces/: agent_caller.py  chat_with_agent.py  session_register.py
app/application/use_cases/: chat_with_agent.py  session_register.py
app/docker/: Dockerfile
app/domain/: exceptions.py
app/domain/entities/: request.py  session.py
app/domain/interfaces/: session_repository.py
app/infrastructure/adapters/fastapi/: create_session_api.py  fastapi.py  health_api.py  models.py  run_agent_sse_api.py
app/infrastructure/adapters/gcp/: oauth_callback_app.py  oauth_callback_handler.py  session_repository.py
app/infrastructure/adapters/gcp/google_agent_caller/: google_agent_caller.py
app/infrastructure/adapters/gcp/google_agent_caller/gmail_agent/: agent.py  callbacks.py
app/infrastructure/adapters/gcp/google_agent_caller/weather_agent/: agent.py
app/tests/: config_test.yaml  conftest.py
app/tests/application/use_cases/: test_google_agent_caller.py
app/tests/infrastructure/adapters/fastapi/: test_agent_endpoints.py  test_fastapi.py
deploy/: Makefile  README.md  helmfile.yaml  secrets.yaml
deploy/charts/fastapi_agent/: Chart.yaml
deploy/charts/fastapi_agent/templates/: agent-deployment.yaml  agent-service.yaml  redis.yaml  secret.yaml
deploy/fastapi_agent/: values.yaml.gotmpl
infra/: .sops.yaml  Makefile  README.md  aws_load_balancer_controller.tf  ecr.tf  eks.tf  iam_policies.tf  iam_roles.tf  kubernetes_db_init.tf  kubernetes_ingress.tf  main.tf  network.tf  outputs.tf  rds.tf  route53.tf  secrets.yaml  terraform.tf  variables.tf
